# testpad-cli

./: pyproject.toml
testpad_cli/: base_group.py  config.py  entrypoint.py  exceptions.py  projects.py  runs.py  scripts.py  utils.py
testpad_cli/renderers/: __init__.py  _base.py  json.py  pretty.py
